# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  deploy.sh  docker-compose.development.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  exercise-8.md  pyproject.toml  requirements.txt  session_items.py
classes/: index_view_model.py  to_do_item.py
config/: trello_config.py
helpers/: mongo_wrapper.py  trello_wrapper.py
static/css/: bootstrap-datepicker3.css
templates/: addItem.html  index.html  layout.html
tests/: __init__.py  conftest.py  test_app.py
tests/classes/: test_index_view_model.py
tests_selenium/: conftest.py  test_app.py
