[tool.poetry]
name = "devops-course-starter"
version = "0.1.0"
description = ""
authors = ["Oskar Williams <oskarwilliams378@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = false
